# ccxt-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
docs/plans/: 2026-02-10-ws-local-orderbook-manager.md  2026-02-28-rust-trader-integration.md
examples/: README.md  advanced_orders.rs  binance_export_parquet.rs  binance_public_api.rs  bybit_public_api.rs  ccxt_style_usage.rs  cross_validate_runner.rs  fetch_ohlcv.rs  live_trading_basics.rs  market_cache_demo.rs  multi_exchange_comparison.rs  multi_exchange_trading.rs  okx_public_api.rs  position_management.rs  read_parquet.rs  simple_ohlcv.rs  verify_binance_data.rs  websocket_ticker.rs  websocket_trading.rs
scripts/: cross_validate.py  generate_fixtures.py
src/: lib.rs  pancakeswap.rs  uniswap.rs
src/base/: decimal.rs  errors.rs  exchange.rs  http_client.rs  local_orderbook.rs  market_cache.rs  mod.rs  orderbook_recovery.rs  precise.rs  rate_limiter.rs  signer.rs  ws.rs  ws_connection.rs
src/binance/: mod.rs  parsers.rs  types.rs  ws.rs
src/bybit/: mod.rs  parsers.rs  ws.rs
src/dex/: erc20.rs  mod.rs  provider.rs  subgraph.rs  wallet.rs
src/hyperliquid/: client.rs  constants.rs  exchange.rs  mod.rs  parsers.rs  signer.rs  types.rs  ws.rs
src/okx/: mod.rs  parsers.rs  ws.rs
src/types/: account.rs  balance.rs  borrow.rs  common.rs  conversion.rs  currency.rs  deposit.rs  deposit_withdraw_fee.rs  fee.rs  funding.rs  funding_history.rs  greeks.rs  last_price.rs  ledger.rs  leverage.rs  leverage_tier.rs  liquidation.rs  long_short.rs  margin_mod.rs  market.rs  mod.rs  ohlcv.rs  open_interest.rs  option.rs  order.rs  orderbook.rs  position.rs  ticker.rs  trade.rs  transfer.rs
src/uniswap/: constants.rs  exchange.rs  parsers.rs  pools.rs  swap.rs
tests/: error_scenario_tests.rs  live_public_tests.rs  order_type_tests.rs  position_tests.rs  sandbox_tests.rs  static_response_tests.rs  test_comparison.rs  test_market_cache_integration.rs  test_validators.rs  uniswap_swap_test.rs  ws_integration_tests.rs
tests/common/: comparison.rs  fixture_loader.rs  mod.rs
tests/fixtures/binance/: fetch_markets.json  fetch_ohlcv_BTC_USDT.json  fetch_order_book_BTC_USDT.json  fetch_ticker_BTC_USDT.json  fetch_ticker_ETH_USDT.json  fetch_tickers_BTC_ETH.json  fetch_trades_BTC_USDT.json
tests/fixtures/bybit/: fetch_markets.json  fetch_ohlcv_BTC_USDT.json  fetch_order_book_BTC_USDT.json  fetch_ticker_BTC_USDT.json  fetch_ticker_ETH_USDT.json  fetch_tickers_BTC_ETH.json  fetch_trades_BTC_USDT.json
tests/fixtures/okx/: fetch_markets.json  fetch_ohlcv_BTC_USDT.json  fetch_order_book_BTC_USDT.json  fetch_ticker_BTC_USDT.json  fetch_ticker_ETH_USDT.json  fetch_tickers_BTC_ETH.json  fetch_trades_BTC_USDT.json
tests/static_response/: mod.rs
tests/validators/: balance.rs  currency.rs  funding_rate.rs  funding_rate_history.rs  leverage_tier.rs  market.rs  mod.rs  ohlcv.rs  order.rs  orderbook.rs  position.rs  ticker.rs  trade.rs
