[package]
name = "ccxt"
version = "0.0.1"
edition = "2021"
authors = ["CCXT-RS Contributors"]
license = "MIT"
description = "Unified Rust API for cryptocurrency exchange trading (CEX & DEX)"
repository = "https://github.com/ccxt/ccxt-rs"
keywords = ["cryptocurrency", "exchange", "trading", "dex", "cex"]
categories = ["api-bindings", "finance"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal math (never f64 for money)
rust_decimal = { version = "1.37", features = ["serde"] }

# HMAC signing
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

# URL encoding
urlencoding = "2.1"

# Error types
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Rate limiting
governor = "0.8"

# Logging
tracing = "0.1"

# GraphQL (for DEX subgraphs)
graphql_client = { version = "0.14", optional = true }

# EVM/Blockchain dependencies (DEX only)
# Note: Using 0.8 for now to avoid dependency conflicts
# Will upgrade to 1.1+ when all SDKs are compatible
alloy = { version = "0.8", features = [
    "contract",
    "network",
    "provider-http",
    "signers",
    "signer-local",
    "sol-types",
    "rpc-types",
    "eip712",
], optional = true }

# Uniswap SDKs
uniswap-sdk-core = { version = "1.0", optional = true }
uniswap-v2-sdk = { version = "2.0", optional = true }
uniswap-v3-sdk = { version = "6.0", optional = true }

# MessagePack serialization (for Hyperliquid L1 action signing)
rmp-serde = { version = "1.3", optional = true }

# Hyperliquid SDK
# Note: Temporarily disabled due to alloy version conflict
# hypersdk = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
mockito = "1.6"
polars = { version = "0.44", features = ["lazy", "dtype-datetime", "parquet"] }
rust_decimal_macros = "1.37"

[features]
default = []

# Individual exchanges
binance = []
bybit = []
okx = []
uniswap = ["dep:uniswap-v3-sdk", "dep:uniswap-v2-sdk", "dep:uniswap-sdk-core", "dep:alloy", "dep:graphql_client"]
pancakeswap = ["dep:uniswap-v3-sdk", "dep:uniswap-v2-sdk", "dep:uniswap-sdk-core", "dep:alloy", "dep:graphql_client"]
hyperliquid = ["dep:alloy", "dep:rmp-serde"]

# Aggregate features
all-cex = ["binance", "bybit", "okx"]
all-dex = ["uniswap", "pancakeswap", "hyperliquid"]
all = ["all-cex", "all-dex"]

[[example]]
name = "verify_binance_data"
path = "examples/verify_binance_data.rs"

[[example]]
name = "binance_public_api"
path = "examples/binance_public_api.rs"
required-features = ["binance"]

[[example]]
name = "binance_export_parquet"
path = "examples/binance_export_parquet.rs"
required-features = ["binance"]

[[example]]
name = "read_parquet"
path = "examples/read_parquet.rs"

[[example]]
name = "ccxt_style_usage"
path = "examples/ccxt_style_usage.rs"
required-features = ["binance"]

[[example]]
name = "fetch_ohlcv"
path = "examples/fetch_ohlcv.rs"
required-features = ["binance"]

[[example]]
name = "simple_ohlcv"
path = "examples/simple_ohlcv.rs"
required-features = ["binance"]

[[example]]
name = "bybit_public_api"
path = "examples/bybit_public_api.rs"
required-features = ["bybit"]

[[example]]
name = "okx_public_api"
path = "examples/okx_public_api.rs"
required-features = ["okx"]

[[example]]
name = "multi_exchange_comparison"
path = "examples/multi_exchange_comparison.rs"
required-features = ["binance", "bybit", "okx"]
